update workflow file

--- a/.github/workflows/main_demo-cua24s.yml
+++ b/.github/workflows/main_demo-cua24s.yml
@@ -64,5 +64,5 @@ jobs:
         with:
           app-name: 'demo-cua24s'
           slot-name: 'Production'
-          package: .
+          package: dist/
           
